@@ -8,9 +8,7 @@ import com.envyful.api.config.yaml.AbstractYamlConfig;
 import com.envyful.api.forge.config.ConfigReward;
 import com.envyful.api.forge.config.ConfigRewardPool;
 import com.envyful.api.player.SaveMode;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import org.spongepowered.configurate.objectmapping.ConfigSerializable;
 
 import java.util.List;
@@ -28,10 +26,9 @@ public class BetterDexRewardsConfig extends AbstractYamlConfig {
     private int messageDelaySeconds = 60;
     private boolean originalTrainerRewardsOnly = false;
 
-    private Map<String, DexCompletion> rewardStages = Maps.newHashMap(ImmutableMap.of(
+    private Map<String, DexCompletion> rewardStages = Map.of(
             "one", new DexCompletion(1, 1, ConfigItem.builder().build(), ConfigItem.builder().build(), ConfigItem.builder().build(), 1.0,
-                                     ConfigRewardPool.builder()
-                                             .guranteedReward(new ConfigReward(
+                                     ConfigRewardPool.builder(new ConfigReward(
                                                      Lists.newArrayList("give %player% minecraft:diamond 1"),
                                                      Lists.newArrayList("You've completed 1% of the dex!")))
                                              .minRolls(1).maxRolls(1)
@@ -39,7 +36,7 @@ public class BetterDexRewardsConfig extends AbstractYamlConfig {
                                                      new ConfigReward(Lists.newArrayList("Hey %player%"), Lists.newArrayList("Hey %player%")))))
                                              .build()
             )
-    ));
+    );
 
     private List<String> claimReminderMessage = Lists.newArrayList(
             "&e&l(!) &eYou have a PokeDex reward level you can claim!"
